--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="180dp"
         android:layout_marginEnd="145dp"
         android:layout_marginBottom="122dp"
-        android:text="Bienvenido al mapa"
+        android:text="¡Benvenuto!"
         app:layout_constraintBottom_toTopOf="@+id/showMapButt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,12 +26,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="136dp"
-        android:layout_marginTop="122dp"
         android:layout_marginEnd="137dp"
-        android:layout_marginBottom="361dp"
+        android:layout_marginBottom="280dp"
         android:onClick="openMapActivity"
         android:text="Mostrar mapa"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/showInfoText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="524dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="205dp" />
+
+    <Button
+        android:id="@+id/showInformationButt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="117dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginEnd="116dp"
+        android:layout_marginBottom="43dp"
+        android:onClick="openInformationActivity"
+        android:text="Mostrar información"
+        app:layout_constraintBottom_toTopOf="@+id/showMapButt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
