--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="144dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="145dp"
-        android:layout_marginBottom="122dp"
-        android:text="¡Benvenuto!"
-        app:layout_constraintBottom_toTopOf="@+id/showMapButt"
+        android:layout_marginBottom="25dp"
+        android:text="¡Bienvenido!"
+        app:layout_constraintBottom_toTopOf="@+id/showInformationButt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,20 +26,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="136dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="137dp"
-        android:layout_marginBottom="280dp"
+        android:layout_marginBottom="478dp"
         android:onClick="openMapActivity"
         android:text="Mostrar mapa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/showInformationButt" />
 
     <TextView
         android:id="@+id/showInfoText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="524dp"
+        android:layout_marginTop="300dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="205dp" />
 
@@ -48,13 +49,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="117dp"
-        android:layout_marginTop="74dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="116dp"
-        android:layout_marginBottom="43dp"
+        android:layout_marginBottom="21dp"
         android:onClick="openInformationActivity"
         android:text="Mostrar información"
         app:layout_constraintBottom_toTopOf="@+id/showMapButt"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
