--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="140dp"
         android:layout_marginBottom="23dp"
-        android:text="¡Benvenuto!"
+        android:text="¡Bienvenido!"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/showInformationButt"
         app:layout_constraintEnd_toEndOf="parent"
