--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -18,6 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Mostrar Informacion"
+        android:text="@string/mostrar_informacion2"
         android:background="@color/cardview_light_background"/>
 </RelativeLayout>
